[package]
name = "wpcuc"
version = "0.1.0"
authors = ["Dominique Broeglin <dominique.broeglin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Waterkotte WPCU.C communication"
repository = "https://github.com/dbroeglin/wpcuc"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "0.4.0", default-features = false, features = ["rtu"] }
