[package]
name = "wpcuc"
version = "0.1.0"
authors = ["Dominique Broeglin <dominique.broeglin@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Waterkotte WPCU.C communication"
repository = "https://github.com/dbroeglin/wpcuc"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-modbus = { version = "0.4.0", default-features = false, features = ["rtu"] }
tokio-serial = { version = "4.3.3" }
tokio = { version = "0.2.0", features = ["rt-core", "macros"] } 

time = "0.2.9"
chrono = "0.4.11"
encoding = "0.2.33"
byteorder = { version = "*" }
